[package]
name = "nebula_cluster"
version = "1.1.0"
edition = "2021"
authors = ["Nebula Audio"]
license = "AGPL-3.0-or-later"
description = "Nebula Cluster free open-source CLAP, VST3, and AUv2 audio effect"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = ["xtask"]
resolver = "2"

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false, features = ["vst3"] }
parking_lot = "0.12"
rand = "0.8"
rustfft = "6.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
clap-wrapper = { version = "0.3", default-features = false, features = ["auv2", "parallel"] }

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = false
debug-assertions = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1
